# RocketMonitor

./: CMakeLists.txt  main.cpp
angle_widget/: AngleWidget.cpp  AngleWidget.h
gyroscope_widget/: GyroscopeWidget.cpp  GyroscopeWidget.h
gyroscope_widget/circular_dashboard/: attitude_widget.cpp  attitude_widget.h  circular_graphics_scene.cpp  circular_graphics_scene.h  circular_graphics_view.cpp  circular_graphics_view.h
gyroscope_widget/circular_dashboard/graphics_items/: circle_arround_qgi.cpp  circle_arround_qgi.h  heigh_of_gyro.cpp  heigh_of_gyro.h  parent_gyroscope.cpp  parent_gyroscope.h
gyroscope_widget/gyroscope_console/: GyroButtonsAndConsoles.cpp  GyroButtonsAndConsoles.h
location_widget/: MapApplication.cpp  MapApplication.h
main_application/: RocketMainWindow.cpp  RocketMainWindow.h
splash_screen/: SplashScreen.cpp  SplashScreen.h
